--- a/src/index.html
+++ b/src/index.html
@@ -9,4 +9,5 @@
     <div id="app"></div>
     <script src="jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
